--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "moment": "^2.29.4",
     "mongoose": "^6.6.1",
+    "mongoose-auto-increment": "^5.0.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2"
