feat: Change the way .env is loaded

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,14 @@
 # Rest API
-REACT_APP_BASE_PORT=
+BASE_PORT=
 
 # MongoDB Info
-REACT_APP_DB_ID=
-REACT_APP_DB_PW=
-REACT_APP_DB_ENDPOINT=
+DB_ID=
+DB_PW=
+DB_ENDPOINT=
+
+# SMS Notification API key
+NCP_SENS_ACCESS=
+NCP_SENS_SECRET=
+NCP_SENS_API_ID=
+NCP_SENS_API_SECRET=
+SMS_CALL_NUMBER=
